# gaaf

./: .claudeignore  .gitignore  CITATION.cff  CREDITS.md  GEMINI.md  README.md  install.ps1  install.sh
.devcontainer/: devcontainer.json
.gemini/: settings.json
.gemini/commands/: acquire.toml  analyze.toml  cite-check.toml  disclose.toml  discover.toml  plan.toml  review.toml  synthesize.toml
mcp-server/: README.md  pyproject.toml
mcp-server/gaaf_mcp/: __init__.py  server.py
mcp-server/gaaf_mcp/tools/: citations.py  validators.py
methodology/: citation-discipline.md  identification.md  principles.md  replication.md  writing-style.md
scripts/: doctor.ps1  doctor.sh
