[project]
name = "gaaf-mcp"
version = "0.1.0"
description = "Local MCP server for GAAF: Crossref lookups, bib validation, repro checks."
readme = "README.md"
requires-python = ">=3.11"
license = "LGPL-3.0-or-later"
authors = [{ name = "GAAF contributors" }]
dependencies = [
  "mcp>=1.2.0",
  "httpx>=0.27",
  "pybtex>=0.24",
]

[project.scripts]
gaaf-mcp = "gaaf_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gaaf_mcp"]
